--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -12,7 +12,10 @@
   .col-md-6
     %h3 Templates
     - if @templates.blank?
-      %p.no_records No Records
+      -if @template_count == 0
+        %p You have no templates.
+      -else
+        %p No templates match your search criteria.
     -else
       %ul.workout_list
         - @templates.each do |workout|
@@ -30,7 +33,10 @@
   .col-md-6
     %h3 Client Workouts
     - if @workouts.blank?
-      %p.no_records No Records
+      - if @client_workout_count == 0
+        %p You have created no client workouts. Get started with the "New Workout" button above.
+      -else
+        %p No client workouts match your search criteria.
     -else
       %ul.workout_list
         - @workouts.each do |workout|
