--- a/app/views/exercise_sets/_fields.html.haml
+++ b/app/views/exercise_sets/_fields.html.haml
@@ -1,7 +1,7 @@
 = f.fields_for :set_records do |set_records_form|
   .weight_record_entry
-    = set_records_form.number_field :weight, min: 0, step: 0.5, class: "four_digit_entry"
+    = set_records_form.number_field :weight, min: 0, step: 0.5, class: "four_digit_entry user_weight_entry"
     kg
-    =set_records_form.link_to_remove 'Remove', class: "btn btn-danger btn-xs"
+    =set_records_form.link_to_remove 'Remove', class: "btn btn-danger btn-sm lift_button"
 .weight_entry_add
   = f.link_to_add "+ Weight", :set_records, class: "btn btn-success btn-lg full_width"
