--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,8 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand{:href => "#"} Zinc Fitness
+        %a.navbar-brand{:href => "#"}
+          =image_tag 'logo_transp_home.png', class: "zinc_logo"
       - if current_user
         .collapse.navbar-collapse.navbar-ex1-collapse
           %ul.nav.navbar-nav
