--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,27 +1,30 @@
 %h2 Sign up
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
-  %div
-    = f.label :first_name
-    %br/
-    = f.text_field :first_name, :autofocus => true
-  %div
-  %div
-    = f.label :last_name
-    %br/
-    = f.text_field :last_name
-  %div
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email
-  %div
-    = f.label :password
-    %br/
-    = f.password_field :password
-  %div
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %div= f.submit "Sign up"
-= render "devise/shared/links"
+  .row
+    .col-md-5
+      %div
+        = f.label :first_name
+        %br/
+        = f.text_field :first_name, :autofocus => true
+      %div
+      %div
+        = f.label :last_name
+        %br/
+        = f.text_field :last_name
+      %div
+      %div
+        = f.label :email
+        %br/
+        = f.email_field :email
+      %div
+        = f.label :password
+        %br/
+        = f.password_field :password
+      %div
+        = f.label :password_confirmation
+        %br/
+        = f.password_field :password_confirmation
+    .col-md-7.button_center
+      %div= f.submit "Sign up", class: "btn btn-danger btn-lg full_width"
+      = render "devise/shared/links"
