--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -8,7 +8,7 @@
 .row
   .col-md-12
     -if @users.blank?
-      %p.no_records No Records
+      %p No records match your search criteria.
     -else
       %ul.user_list
         - @users.each do |user|
