--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -39,3 +39,4 @@
     .col-md-7.button_center
       %div= f.submit "Save", class: "btn btn-danger btn-lg full_width"
       = link_to "Back", :back, method: :get, class: "btn btn-primary btn-lg full_width"
+  .row
