--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -28,3 +28,4 @@
     .col-md-7.button_center
       %div= f.submit "Sign up", class: "btn btn-danger btn-lg full_width"
       = render "devise/shared/links"
+  .row
