--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -40,3 +40,4 @@
       %div= f.submit "Save", class: "btn btn-danger btn-lg full_width"
       = link_to "Back", :back, method: :get, class: "btn btn-primary btn-lg full_width"
   .row
+    .spacer
