--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -29,3 +29,4 @@
       %div= f.submit "Sign up", class: "btn btn-danger btn-lg full_width"
       = render "devise/shared/links"
   .row
+    .spacer
