changes style for email

--- a/app/views/exercises/_form.html.haml
+++ b/app/views/exercises/_form.html.haml
@@ -23,3 +23,5 @@
         =f.submit class: "btn btn-danger btn-lg full_width"
 
       = link_to 'Back', exercises_path, method: :get, class: "btn btn-primary btn-lg full_width"
+  .row
+    .spacer
