--- a/app/views/workouts/_form.html.haml
+++ b/app/views/workouts/_form.html.haml
@@ -39,3 +39,5 @@
       .actions
         = f.submit class: "btn btn-danger btn-lg full_width"
       = link_to 'Back', workouts_path, method: :get, class: "btn btn-primary btn-lg full_width"
+  .row
+    .spacer
