--- a/app/views/exercise_sets/_form.html.haml
+++ b/app/views/exercise_sets/_form.html.haml
@@ -43,3 +43,5 @@
       .actions
         = f.submit "Save", class: "btn btn-danger btn-lg full_width"
       = link_to "Back", @exercise_set.workout, class: "btn btn-primary btn-lg full_width"
+  .row
+    .spacer
