--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -63,7 +63,8 @@
         -else
           = link_to 'Edit', edit_workout_path(@workout), class: "btn btn-default btn-lg half_width"
           = link_to "Copy", duplicate_workout_path(@workout), method: :post, class: "btn btn-warning btn-lg half_width"
-    %br
+.row
+  .spacer
 
 
 
