--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,8 +1,9 @@
-=image_tag 'logo_transp_home.png'
+.image_center
+  =image_tag('logo_transp_home.png')
 %p
-  = "Hello #{resource.first_name} (#{@resource.email})"
+  = "Hello #{@resource.first_name} (#{@resource.email})"
 %p
   Someone has requested a link to change your password for Zinc Fitness. You can do this through the link below.
-%p
-  = link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token), class: "btn btn-danger btn-xs"
 %p If you didn't request this then please ignore this email. Your password won't change until you access the link above and create a new one.
+%p.image_center
+  = link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token), class: "btn btn-success"
