--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -57,3 +57,5 @@
               = link_to "Copy", duplicate_workout_path(workout), method: :post, class: "btn btn-warning btn-xs not_corner"
       = paginate @workouts, param_name: 'page_2'
       %br
+.row
+  .spacer
