--- a/app/views/exercises/index.html.haml
+++ b/app/views/exercises/index.html.haml
@@ -28,5 +28,6 @@
                 = link_to 'Delete', exercise, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs not_corner "
       = paginate @exercises
       %br
-
+.row
+  .spacer
 
