--- a/app/assets/stylesheets/workouts.css.scss
+++ b/app/assets/stylesheets/workouts.css.scss
@@ -227,10 +227,18 @@ ul.maximums {
 
 ul.maximums li {
   display: block;
-  color: $default;
+  // color: $default;
   font-size: 1em;
-
 }
+
+ul.maximums li:nth-child(odd){
+  color: $default;
+}
+
+ul.maximums li:nth-child(even){
+  color: grey;
+}
+
 
 .workout_heading {
   position: relative;
