--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,6 +1,6 @@
 %h2.workout_heading
   Dashboard:
-  = link_to 'New Workout', new_workout_path, class: "btn btn-info new_workout_button"
+  = link_to '+ Workout', new_workout_path, class: "btn btn-info new_workout_button"
 
 =search_form_for @q, :url => url_for(:workouts_controller => "q", :action => "index") do |f|
   .search_bar
