--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -54,7 +54,7 @@
           = button_to "Mark Complete", complete_workout_path(@workout), method: :post, class: "btn btn-success btn-lg full_width"
         = button_to 'My Workouts', user_path(current_user), method: :get, class: "btn btn-primary btn-lg full_width"
       - else
-        = button_to "#{@workout.user.first_name.possessive} workouts", user_path(@workout.user), method: :get, class: "btn btn-success btn-lg full_width"
+        = button_to "#{@workout.user.first_name[0].possessive} workouts", user_path(@workout.user), method: :get, class: "btn btn-success btn-lg full_width"
         = button_to 'All Workouts', workouts_path, method: :get, class: "btn btn-primary btn-lg full_width"
     -else
       = button_to 'All Workouts', workouts_path, method: :get, class: "btn btn-primary btn-lg full_width"
