now redirects to MY WORKOUTS on workout completion. Removes bottom border during weight addition

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -50,8 +50,9 @@
     .container
 
       = yield
-    .footer
-      Site developed by Luke Robertson
+    -unless @no_border
+      .footer
+        Site developed by Luke Robertson
 
 
 
