--- a/app/assets/stylesheets/workouts.css.scss
+++ b/app/assets/stylesheets/workouts.css.scss
@@ -406,6 +406,7 @@ ul.exercise_set li.achieved_weight {
   background: none;
   font-weight: normal;
 
+
 }
 
 
@@ -615,4 +616,16 @@ p.please_wait {
 
   color: $primary;
   display: inline-block;
+}
+
+ul.exercise_set li.last_time {
+  padding-left: 0.5em;
+  padding-top: 0.1em;
+  color: $default_light;
+  background: none;
+  font-weight: normal;
+  display: block;
+  font-size: 0.8em;
+  font-style: italic;
+
 }
