--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -60,9 +60,9 @@
     - if @workout.user
       - if @workout.user == current_user
         - if @workout.completed
-          = button_to "Mark Incomplete", complete_workout_path(@workout), method: :post, class: "btn btn-success btn-lg full_width"
+          = button_to "Re-Open", complete_workout_path(@workout), method: :post, class: "btn btn-success btn-lg full_width"
         -else
-          = button_to "Mark Complete", complete_workout_path(@workout), method: :post, class: "btn btn-success btn-lg full_width"
+          = button_to "Complete", complete_workout_path(@workout), method: :post, class: "btn btn-success btn-lg full_width"
         = button_to 'My Workouts', user_path(current_user), method: :get, class: "btn btn-primary btn-lg full_width"
       - else
         = button_to "#{@workout.user.first_name[0].possessive} workouts", user_path(@workout.user), method: :get, class: "btn btn-success btn-lg full_width"
