allows for blank last time

--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -34,9 +34,10 @@
               %li.last_time
                 = "Personal Best: #{@workout.user.personal_bests[set.exercise.name]}kg"
             -if set.most_recent_similar_activity
-              %li.last_time
-                Last Time:
-                =last_time_list(set.most_recent_similar_activity)
+              -unless (set.most_recent_similar_activity.set_records.blank? && set.most_recent_similar_activity.notes.blank?)
+                %li.last_time
+                  Last Time:
+                  =last_time_list(set.most_recent_similar_activity)
         - if set.set_records.any?
 
           %li.achieved_weight
