--- a/app/views/exercises/index.html.haml
+++ b/app/views/exercises/index.html.haml
@@ -9,8 +9,9 @@
     =f.submit "Search", class: "btn btn-success btn-xs"
 
 .row
-  .col-md-12
-    %p Please note that you will only have the option to delete Exercises that are NOT being used within existing Workouts.
+  -if can? :manage, :all
+    .col-md-12
+      %p Please note that you will only have the option to delete Exercises that are NOT being used within existing Workouts.
 
   .col-md-12
     - if @exercises.blank?
